--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+.w3-panel.w3-large.anchor-link-fa {
+  font-size: 28px !important;
+}
+
+#profile-pic {
+  border-radius: 25px;
+}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
@@ -17,16 +24,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="/w3images/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
+    <img src="assets/profile-pic.jpg" style="width:45%;" class="w3-round" id="profile-pic"><br><br>
     <h4><b>Charmie Quiño</b></h4>
     <p class="w3-text-grey">A.K.A. Mikko</p>
   </div>
   <div class="w3-bar-block">
-    <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>PORTFOLIO</a>
-    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a>
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
+    <a href="#portfolio" id="id_portfolio" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>PORTFOLIO</a>
+    <a href="#about" id="id_about" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a>
+    <a href="#contact" id="id_contact" onclick="w3_close(); setActive(this)" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
-  <div class="w3-panel w3-large">
+  <div class="w3-panel w3-large anchor-link-fa">
     <a href="https://github.com/LightDev777" target="_blank"><i class="fa fa-github w3-hover-opacity" aria-hidden="true"></i></a>
     <a href="https://twitter.com/charmito05" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/charmiequino/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
@@ -294,6 +301,13 @@ function w3_open() {
 function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
+
+}
+
+function setActive(this) {
+  var x = document.getElementById(this.id);
+  console.log(x);
+  x.classList.toggle("w3-text-teal");
 }
 </script>
 
