--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <!-- End page content -->
 </div>
 
-<script>
+<script type="text/javascript">
 // Script to open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
@@ -301,15 +301,10 @@ function w3_open() {
 function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
-
-}
-
-function setActive(this) {
-  var x = document.getElementById(this.id);
-  console.log(x);
-  x.classList.toggle("w3-text-teal");
 }
 </script>
+
+<script src="main.js"></script>
 
 </body>
 </html>
