--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="assets/thumbs/fcc-simon-game.png" alt="FCC Simon Game" style="width:100%" class="w3-hover-opacity">
+      <a href="https://codepen.io/lightdev777/full/YQMoMa" target="_blank"><img src="assets/thumbs/fcc-simon-game.png" alt="FCC Simon Game" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>FreeCodeCamp.com - Simon Game</b></p>
+        <p>Final project on Front End Development Course in FreeCodeCamp.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
