updated portfolio list

--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://codepen.io/lightdev777/full/YQMoMa" target="_blank"><img src="assets/thumbs/fcc-simon-game.png" alt="FCC Simon Game" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Simon Game</b></p>
-        <p>Final project on Front End Development Course in FreeCodeCamp.</p>
+        <p>FreeCodeCamp Front End Development course project. Re-create the Simon game in Codepen using HTML, CSS and Javascript.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="https://codepen.io/lightdev777/full/NjMreY" target="_blank"><img src="assets/thumbs/fcc-tic-tac-toe-game.png" alt="FCC Tic-Tac-Toe Game" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>FreeCodeCamp.com - Tic-Tac-Toe Game</b></p>
+        <p>FreeCodeCamp Front End Development course project. Create a Tic-Tac-Toe game in Codepen using HTML, CSS and Javascript. For the one player mode, I've implemented the Minimax algorithm.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="/w3images/nature.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="https://codepen.io/lightdev777/pen/eRZEpo" target="_blank"><img src="assets/thumbs/fcc-basic-calculator.png" alt="FCC Basic Calculator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>FreeCodeCamp.com - Basic Calculator</b></p>
+        <p>FreeCodeCamp Front End Development course project. Create a basic calculator in Codepen using HTML, CSS and Javascript.</p>
       </div>
     </div>
   </div>
@@ -86,17 +86,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="https://codepen.io/lightdev777/pen/BZwbrQ" target="_blank"><img src="assets/thumbs/fcc-pomodoro-clock.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>FreeCodeCamp.com - Pomodoro Clock</b></p>
+        <p>A timer using the Pomodoro technique. The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. The technique uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks. This web application allows you to set the session and break time to customize your time management.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="https://codepen.io/lightdev777/pen/bqNVPe" target="_blank"><img src="assets/thumbs/fcc-random-quote-generator.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>FreeCodeCamp.com - Random Quote Generator</b></p>
+        <p>A simply web application that randomly selects a quote from a list.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
