--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </header>
 
 
-  <div id="health-it-section" class="">
-    <h2>&lt;Health IT/&gt;</h2>
+  <div id="health-it-section" class="w3-container">
+    <h2>Health IT</h2>
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
         <a href="https://www.mirth.com" target="_blank"><img src="assets/thumbs/MirthConnect.png" alt="Mirth Connect logo" style="width:100%" class="w3-hover-opacity"></a>
@@ -89,7 +89,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
 
 
-  <div id="web-section" class="">
+  <div id="web-section" class="w3-container">
   <h2>Web Development</h2>
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
@@ -162,7 +162,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 
 
-<div id="support-section" class="">
+<div id="support-section" class="w3-container">
 
     <h2>Support, Software Testing and Systems Analysis</h2>
 
