add descriptions on portfolio

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://codepen.io/lightdev777/full/NjMreY" target="_blank"><img src="assets/thumbs/fcc-tic-tac-toe-game.png" alt="FCC Tic-Tac-Toe Game" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Tic-Tac-Toe Game</b></p>
-        <p>FreeCodeCamp Front End Development course project. Create a Tic-Tac-Toe game in Codepen using HTML, CSS and Javascript. For the one player mode, I've implemented the Minimax algorithm.</p>
+        <p>FreeCodeCamp Front End Development course project. Create a Tic-Tac-Toe game in Codepen using HTML, CSS and Javascript. For the one player mode, I've implemented the Minimax algorithm. The computer is unbeatable on this case.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
@@ -129,14 +129,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://codepen.io/lightdev777/full/bqNVPe" target="_blank"><img src="assets/thumbs/fcc-random-quote-generator.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Random Quote Generator</b></p>
-        <p>A simply web application that randomly selects a quote from a list.</p>
+        <p>A simple web application that randomly selects a quote from a list. You can also use the Tweet button to share the quote in the Twitterverse.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="https://codepen.io/lightdev777/full/OpwVMp" target="_blank"><img src="assets/thumbs/fcc-twitch-tv.png" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - TwitchTV Listing</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Show a specific list of Twitch users. Their status is pulled using Twitch.tv's JSON API. You can filter the list to who's online or offline.</p>
       </div>
     </div>
   </div>
@@ -147,14 +147,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://codepen.io/lightdev777/full/BWZpzO" target="_blank"><img src="assets/thumbs/fcc-wikipedia-viewer.png" alt="FCC Pomodoro Clock" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Wikipedia Viewer</b></p>
-        <p></p>
+        <p>This is a simple search function in the Wikipedia database.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://codepen.io/lightdev777/full/XMXwoo" target="_blank"><img src="assets/thumbs/fcc-weather-forecast.png" alt="FCC Random Quote Generator" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>FreeCodeCamp.com - Local Weather App</b></p>
-        <p></p>
+        <p>This is a simple web app showing the current weather in your location. It shows your location (city and country), current temperature and the weather condition. I'm using Yahoo's weather API. The background image changes depending on the current weather condition. The temperature can also be toggled between Celsius and Fahrenheit.</p>
       </div>
     </div>
   </div>
