--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="assets/profile-pic-2_400x400.jpeg" style="width:80%;" class="w3-round" id="profile-pic"><br><br>
+    <img src="assets/profile-pic-2_400x400.jpeg" class="" id="profile-pic"><br><br>
     <h4><b>Charmie Quiño</b></h4>
     <p class="w3-text-grey">&lt;Mikko/&gt;</p>
   </div>
@@ -216,12 +216,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-row-padding">
       <div class="w3-col m4">
       <a href="http://www.seleniumhq.org/projects/ide/" target="_blank">
-        <img src="assets/thumbs/selenium-logo.png" width="200" alt="Selenium IDE" title="Selenium IDE">
+        <img src="assets/thumbs/selenium-logo.png" width="150" alt="Selenium IDE" title="Selenium IDE">
       </a>
       </div>
       <div class="w3-col m4">
       <a href="https://www.postgresql.org/" target="_blank">
-        <img src="assets/thumbs/postgresql-logo.png" width="300" alt="PostgreSQL Database" title="PostgreSQL Database">
+        <img src="assets/thumbs/postgresql-logo.png" width="200" alt="PostgreSQL Database" title="PostgreSQL Database">
       </a>
       </div>
     </div>
@@ -252,7 +252,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <hr class="w3-opacity">
   </div>
 
-  <div class="w3-black w3-center w3-padding-24"><i class="fa fa-copyright" aria-hidden="true"></i> 2017 Charmie Q. <i class="fa fa-times" aria-hidden="true"></i> Template by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
+  <div class="w3-light-gray w3-center w3-padding-16"><i class="fa fa-copyright" aria-hidden="true"></i> 2017 Charmie Q. <i class="fa fa-times" aria-hidden="true"></i> Template by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 
 <!-- End page content -->
 </div>
